Bug 1739920: Fire a focus win event when the real UI replaces the skeleton UI. r=mhowell,dthayer

Differential Revision: https://phabricator.services.mozilla.com/D130570